# collect-creatures

./: Cargo.toml
assets/: 100301.jfif  tile.jfif
src/: bin.rs  lib.rs
